--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">RXjavaDemo</string>
+    <string name="home">Home</string>
+    <string name="mission">Mission</string>
+    <string name="rocket">Rocket</string>
+    <string name="history">History</string>
+    <string name="user">Users</string>
 </resources>
